feat: always show the workers sorted in the table

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "moduleResolution": "bundler",
     "sourceMap": true,
     "outDir": "dist",
+    "lib": [
+      "ES2023",
+    ],
     "jsx": "react-jsx"
   }
 }
