--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ink": "^5.1.0",
+    "ink-select-input": "^6.0.0",
     "react": "^18.3.1",
     "immer": "^10.1.1",
     "use-immer": "^0.10.0"
